--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: nginx
     ports:
       - "8080:80"
+    networks:
+      - app-network
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
@@ -16,6 +18,8 @@ services:
       - "8001:8000"
     environment:
       - USER_SERVICE_URL=http://user-service:8000
+    networks:
+      - app-network
     volumes:
       - ./api-gateway:/app
     depends_on:
@@ -28,6 +32,8 @@ services:
       - "8002:8000"
     environment:
       - DATABASE_URL=postgresql://user:password@user-db:5432/users
+    networks:
+      - app-network
     volumes:
       - ./user-service:/app
     depends_on:
@@ -42,6 +48,12 @@ services:
       POSTGRES_DB: users
     volumes:
       - user-data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   user-data:
