--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,12 +4,17 @@ http {
     server {
         listen 80;
 
-        location / {
-            proxy_pass http://api-gateway:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        location /api/v1/ {
+            proxy_pass http://api-gateway:8000/api/v1/;
+            include proxy_params;
         }
+
+        # location / {
+        #     proxy_pass http://api-gateway:8000;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
     }
 }
