--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,17 +4,19 @@ http {
     server {
         listen 80;
 
-        location /api/v1/ {
-            proxy_pass http://api-gateway:8000/api/v1/;
-            include proxy_params;
-        }
+        location /api/ {
+            # If trailing slash (8000/) is added then /api/ will be removed.
+            proxy_pass http://api-gateway:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            proxy_redirect off;
+            proxy_buffering off;
 
-        # location / {
-        #     proxy_pass http://api-gateway:8000;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+            # These settings help with handling larger payloads and timeouts
+            client_max_body_size 10m;
+            proxy_read_timeout 60s;
+        }
     }
 }
