new docker files created for prod and workflow for github actions added

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,5 +1,11 @@
 FROM python:3.10-slim
 
+# Set build-time variable (default: production)
+ARG ENV=production
+
+# Set runtime environment variable
+ENV ENV=$ENV
+
 WORKDIR /app
 
 COPY requirements.txt .
@@ -8,4 +14,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# For dev: uvicorn with --reload
+# For prod: uvicorn without --reload
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port 8000 $([ \"$ENV\" = \"development\" ] && echo \"--reload\")"]
