--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,8 +6,6 @@ services:
       - "8080:80"
     networks:
       - app-network
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - api-gateway
       - user-service
@@ -17,17 +15,15 @@ services:
     build:
       context: ./api-gateway
       args:
-        ENV: development
+        NODE_ENV: production
+    image: api-gateway-service-prod:latest
     container_name: api-gateway
-    image: api-gateway-service:latest
     ports:
       - "8001:8000"
     environment:
       - USER_SERVICE_URL=http://user-service:8000
     networks:
       - app-network
-    volumes:
-      - ./api-gateway:/app
     depends_on:
       - user-service
 
@@ -35,17 +31,15 @@ services:
     build:
       context: ./user-service
       args:
-        ENV: development
-    image: user-service:latest
+        ENV: production
+    image: user-service-prod:latest
     container_name: user-service
     ports:
       - "8002:8000"
     environment:
-      - DATABASE_URL=${DATABASE_URL}
+      - DATABASE_URL=postgresql://user:password@user-db:5432/users
     networks:
       - app-network
-    volumes:
-      - ./user-service:/app
     depends_on:
       - user-db
 
@@ -53,9 +47,9 @@ services:
     image: postgres:13
     container_name: user-db
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: users
     volumes:
       - user-data:/var/lib/postgresql/data
     networks:
