bug fix updated the deployment step to deploy .prod file not dev

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,5 +60,5 @@ jobs:
           script: |
             cd /home/ec2-user/trading-platform
             git pull origin main
-            docker-compose pull
-            docker-compose up -d --remove-orphans
+            docker-compose -f docker-compose.prod.yml pull
+            docker-compose -f docker-compose.prod.yml up -d  --remove-orphans
